--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "postgres",
-    "password": "060688",
-    "database": "rental",
+    "password": "6661",
+    "database": "DoRent",
     "host": "127.0.0.1",
     "dialect": "postgres"
   }
